welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:4: error: reassignment to val
	else if (a = b && b == c) return 5;
                   ^